WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
92775
[chromium] REGRESSION(
r123644
) Compositor HUD crashes immediately with --show-paint-rects
https://bugs.webkit.org/show_bug.cgi?id=92775
Summary
[chromium] REGRESSION(r123644) Compositor HUD crashes immediately with --show...
James Robinson
Reported
2012-07-31 11:20:56 PDT
[chromium] REGRESSION(
r123644
) Compositor HUD crashes immediately with --show-paint-rects
Attachments
Patch
(5.66 KB, patch)
2012-07-31 11:23 PDT
,
James Robinson
no flags
Details
Formatted Diff
Diff
Patch
(6.95 KB, patch)
2012-07-31 13:24 PDT
,
James Robinson
enne
: review+
webkit.review.bot
: commit-queue-
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
James Robinson
Comment 1
2012-07-31 11:23:47 PDT
Created
attachment 155588
[details]
Patch
Adrienne Walker
Comment 2
2012-07-31 12:08:01 PDT
Comment on
attachment 155588
[details]
Patch I mentioned this offline, but I think the bounds should get set every frame rather than in the constructor. While you're touching that code, is it possible to fix the extra commits from the HUD by not adding and removing it every frame?
James Robinson
Comment 3
2012-07-31 13:24:28 PDT
Created
attachment 155619
[details]
Patch
James Robinson
Comment 4
2012-07-31 13:24:38 PDT
PTAL
Adrienne Walker
Comment 5
2012-07-31 14:30:19 PDT
Comment on
attachment 155619
[details]
Patch R=me. Thanks.
WebKit Review Bot
Comment 6
2012-07-31 16:17:21 PDT
Comment on
attachment 155619
[details]
Patch Rejecting
attachment 155619
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2 Last 500 characters of output: nes. Auto-merging LayoutTests/ChangeLog CONFLICT (content): Merge conflict in LayoutTests/ChangeLog Failed to merge in the changes. Patch failed at 0001 [Chromium] Rebaselines. When you have resolved this problem run "git rebase --continue". If you would prefer to skip this patch, instead run "git rebase --skip". To restore the original branch and stop rebasing run "git rebase --abort". rebase refs/remotes/origin/master: command returned error: 1 Died at Tools/Scripts/update-webkit line 164. Full output:
http://queues.webkit.org/results/13392881
James Robinson
Comment 7
2012-07-31 16:31:22 PDT
Committed
r124269
: <
http://trac.webkit.org/changeset/124269
>
Shawn Singh
Comment 8
2012-08-01 11:37:30 PDT
Is this actually fixed? I'm still getting crashes with --show-paint-rects and --show-composited-layer-tree. but --show-fps-counter seems to work fine.
James Robinson
Comment 9
2012-08-01 12:19:57 PDT
(In reply to
comment #8
)
> Is this actually fixed? I'm still getting crashes with --show-paint-rects and --show-composited-layer-tree. but --show-fps-counter seems to work fine.
Seems OK for me in debug on linux, at least on poster circle. Can you get a stacktrace and open a new bug?
Shawn Singh
Comment 10
2012-08-01 13:09:50 PDT
(In reply to
comment #9
)
> (In reply to
comment #8
) > > Is this actually fixed? I'm still getting crashes with --show-paint-rects and --show-composited-layer-tree. but --show-fps-counter seems to work fine. > > Seems OK for me in debug on linux, at least on poster circle. Can you get a stacktrace and open a new bug?
My mistake - this was a false alarm. I thought I was on tip-of-tree, but actually I had not rebased my git branch.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug